--- a/WRR-Reserv/WRR-Reserv/appsettings.json
+++ b/WRR-Reserv/WRR-Reserv/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WRRDBConnection": "Server=localhost;Database=WRRData;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
